# Academic_Project_Mygym_Goldtech_3b4

./: Makefile  Makefile.am  Makefile.in  adherant.txt  admin.txt  agenda.txt  config.h  config.status  configure  configure.in  login.txt  projet4.glade  projet4.glade.bak  projet4.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
projet c/: .makefile.swp  Makefile  fonction.c  fonctions.h  main.c  prog  programme
src/: Makefile  Makefile.am  Makefile.in  adherant.txt  admin.txt  agenda.txt  callbacks.c  callbacks.h  fonction_dieteticien.c  fuctionadherent.c  fuctionadherent.h  function.c  function.h  function.h.gch  function_admin.c  function_admin.h  interface.c  interface.c.bak  interface.h  interface.h.bak  login.txt  main.c  projet4  staffs.txt
src/.deps/: callbacks.Po  fuctionadherent.Po  function.Po  function_admin.Po
